# femtic

./: CMakeLists.txt  README.md
femtic_lib/: CMakeLists.txt
femtic_lib/src/: AnalysisControl.cpp  InversionGaussNewtonDataSpace.cpp  InversionGaussNewtonModelSpace.cpp
femtic_main/: CMakeLists.txt
